--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
         <title>LogWay - Main page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
               rel="stylesheet">
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" th:href="@{/css/style.css}">
     </head>
     <body>
     <header>
@@ -13,7 +13,7 @@
             <div class="buttons">
         <div class="addB1" id="openModal1"><h4>Добавить шаблонные данные</h4></div>
                 <div class="sub"></div>
-        <div class="addB2"id="openModal2"><h4>Добавить новые данные</h4></div>
+        <div class="addB2"id="openDataModal"><h4>Добавить новые данные</h4></div>
             </div>
     </header>
     <div class="main">
@@ -51,41 +51,45 @@
         </div>
     </div>
 
-        <div class="modal-overlay" id="paramsModal">
+        <div class="modal-overlay" id="dataModal">
             <div class="modal-container">
                 <div class="modal-header">
-                    <h3>Введите логин и пароль для базы данных</h3>
+                    <h3> Добавить данные в базу</h3>
+                    <button class="close-btn" id="closeModal">&times;</button>
                 </div>
 
-                <div class="modal-body">
-                    <form id="paramsForm">
-                        <div class="form-group">
-                            <label for="param1">Введите ваш логин</label>
-                            <input type="text"
-                                   id="param1"
-                                   placeholder="Введите значение..."
-                                   class="form-input">
-                        </div>
+                <div class="modal-body scrollable">
+                    <div class="form-group">
+                        <label for="tableSelect">Выберите таблицу:</label>
+                        <select id="tableSelect" class="form-select" onchange="changeTable()">
+                            <option value="">-- Выберите таблицу --</option>
+                            <option value="apps">Приложения (apps)</option>
+                            <option value="sites">Сайты (sites)</option>
+                            <option value="videos">Видео YouTube (youtube_videos)</option>
+                            <option value="app_sessions">Сессии приложений (app_sessions)</option>
+                            <option value="page_sessions">Сессии страниц (page_sessions)</option>
+                            <option value="view_sessions">Сессии просмотров (views_sessions)</option>
+                        </select>
+                    </div>
 
-                        <div class="form-group">
-                            <label for="param2">Введите ваш пароль</label>
-                            <input type="text"
-                                   id="param2"
-                                   placeholder="Введите значение..."
-                                   class="form-input">
+
+                    <form id="dataForm">
+                        <div id="formFields">
+                            <!-- Здесь будут динамически меняться поля -->
+                            <p class="hint">Выберите таблицу для отображения полей</p>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
                     <button class="btn-secondary" id="cancelBtn">Отмена</button>
-                    <button class="btn-primary" id="submitBtn">Применить</button>
+                    <button class="btn-primary" id="saveBtn" disabled>Добавить</button>
                 </div>
             </div>
         </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/modal.js"></script>
+    <script th:src="@{/js/modal.js}"></script>
     </body>
     </html>
