--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -330,7 +330,7 @@
                     <option value="app_sessions">Сессии приложений (app_sessions)</option>
                     <option value="page_sessions">Сессии страниц (page_sessions)</option>
                     <option value="view_sessions">Сессии просмотров (views_sessions)</option>
-                    <option value="ALL_TABLES">🗑️ ВСЕ ТАБЛИЦЫ (полная очистка)</option>
+                    <option value="ALL_TABLES">ВСЕ ТАБЛИЦЫ (полная очистка)</option>
                 </select>
             </div>
             <div id="deleteSpecificSection" style="display: none;">
